--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -3,6 +3,7 @@
     margin-left: 0;
     margin-right: auto;
     margin-left: -35px;
+    /*width: 100px;*/
 }
 
 .category_li{
@@ -13,9 +14,11 @@
     background-color :rgb(240, 237, 237);
     text-align: center;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .category_li:hover{
     margin-left: 3px;
     background-color:  rgb(235, 211, 211);
 }
+
