--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -21,7 +21,8 @@
         <p id="address_"></p>
         <input type="email" name="email" placeholder="email" id="email" onkeyup="checkEmail()"/>
         <p id="email_"></p>
-        <select id="list"></select>
+
+        <!--<select id="list"></select>-->
 
         <button id="saveUser" >Надіслати</button>
     </form>
