--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
 
 
 <div th:include="/fragments/cart_frag::#header"></div>
+<div th:include="/fragments/cart::#cart"></div>
 <div th:include="/fragments/cart_frag::cart_css"></div>
 <div th:include="/fragments/cart_frag::cart_js"></div>
 
@@ -36,7 +37,7 @@
         <!--<div class="target"></div>-->
         <!--<div th:include="/fragments/frag::#prod_wrap"></div>-->
         <!--<div th:include="/fragments/frag::prod_css"></div>-->
-        <div id="btn"></div>
+        <!--<div id="btn"></div>-->
     </main>
 </div>
 
@@ -50,6 +51,6 @@
 <script src="/cartmodal.js"></script>
 
 <!--<script src="/preloader.js"></script>-->
-
+<script src="/acc.js"></script>
 </body>
 </html>
