--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -6,7 +6,8 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow-y: auto; /* Enable scroll if needed */
+    overflow-x: hidden;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 
@@ -21,7 +22,8 @@
 
 #modalCartBoxContent {
 
-    overflow: auto hidden;
+    overflow-y: auto ;
+    overflow-x: hidden;
     background-color: #fefefe;
     margin: auto auto; /* 15% from the top and centered */
     padding: 20px;
@@ -57,6 +59,7 @@
     background-repeat: no-repeat;
     margin-top: 25px;
     outline: none;
+    cursor: pointer;
 }
 .item{
     display: flex;
@@ -77,6 +80,7 @@
     border: 1px solid #ccc;
     -webkit-border-radius: 5px;
     border-radius: 5px;
+    cursor: pointer;
 
 
 }
@@ -120,3 +124,16 @@
     font-family:sans-serif;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.butt_buy{
+    margin-top: 10px;
+    width: 100px;
+    border: 1px solid #56bd4b;
+    background: #fff;
+    cursor: pointer;
+    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+}
