--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -6,7 +6,7 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 
@@ -21,13 +21,15 @@
 
 #modalCartBoxContent {
 
-    overflow: auto hidden;
+
     background-color: #fefefe;
     margin: auto auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 40rem;
     height: 500px;
+    overflow-y: auto; /* Enable scroll if needed */
+    overflow-x:hidden;
 
     background: #FFFFFF;
     box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
