--- a/src/main/resources/templates/fragments/cart_frag.html
+++ b/src/main/resources/templates/fragments/cart_frag.html
@@ -62,8 +62,8 @@
 
                                     <span class="price">Ціна: {{categoryItem.price}}</span>
 
-                                    <div class="product-buttons-wrap" ng-click="add_but(categoryItem.id)">
-                                        <button class="button">Купити</button>
+                                    <div class="product-buttons-wrap" >
+                                        <button class="button" ng-click="add_but(categoryItem.id)">Купити</button>
                                     </div>
                                 </div>
                             </a>
