application with prodInfo page commit2

--- a/src/main/resources/templates/fragments/cart_frag.html
+++ b/src/main/resources/templates/fragments/cart_frag.html
@@ -51,7 +51,7 @@
                 <div ng-click="showCategory">
                     <div ng-repeat="categoryItem in categoryItemArray track by $index">
                         <li class="product-wrapper" >
-                            <a href="" class="product">
+                            <a href="/productInfo/{{categoryItem.id}}" class="product">
                                 <div class="product-photo">
                                     <img src="/image/1.jpg" alt="" ng-click="openInfo(categoryItem.id)"/>
                                 </div>
