--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 <input type="text" name="pName" placeholder="name" id="name"/>
 <input type="text" name="count" placeholder="count" id="count"/>
 <input type="text" name="description" placeholder="descr" id="descr"/>
@@ -5,3 +12,7 @@
 <!--<input type="text" name="category" placerholder="category" id="category"/>-->
 <select id="list"></select>
 <button id="saveBtn">save</button>
+
+<button id="SortByAddingDate">SortByAddingDate</button>
+</body>
+</html>
