--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
+    <link rel="stylesheet" href="css/index.css"/>
     <title>Title</title>
-    <!--<link type="text/css" href="css/preloader.css" rel="stylesheet" />-->
-    <link type="text/css" href="css/modal.css" rel="stylesheet" />
+    <link type="text/css" href="css/modal.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/css/menu.css"/>
+    <link rel="stylesheet" href="/css/prod_wrapper.css"/>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+
+    <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Custom styles for this template -->
+    <link href="/css/new-age.css" rel="stylesheet"/>
+    <link href="/css/styles.css" rel="stylesheet"/>
+    <!--<link href="/css/slider.css" rel="stylesheet"/>-->
+    <link rel="stylesheet" href="/css/dropdown.css"/>
+    <link rel="stylesheet" href="/css/viewProduct.css"/>
+
+
+    <script src="/vendor/angular/angular.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
 </head>
 <body ng-controller="modalcarts">
 
@@ -38,16 +60,12 @@
     </main>
 </div>
 
-<button id="SortByLowPrice">За зростанням ціни</button>
-<button id="SortByHighPrice">За зменшенням ціни</button>
-
-<input type="text" name="name" id="name"/>
-<button id="search">пошук</button>
-<a><button ng-click="open()">Корзина</button></a>
 
 
-<div class="target"></div>
-<div id="btn"></div>
+
+
+<!--<div class="target"></div>-->
+<!--<div id="btn"></div>-->
 
 
 <div th:include="/fragments/frag::#pred" ></div>
