--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,61 +1,95 @@
 
-* {
-    margin:0;
-}
+
+
+
+
+
+/** {*/
+    /*margin:0;*/
+/*}*/
 header{
-    height:100px;
+    height:70px;
     width: 100%;
-    background-color: #04c852;
+    background-color: black;
 
 }
 
-body{
+.inner-left{
 
+    display: inline-block;
     height: 100%;
-    min-width:900px;
+    width: 33%;
+    color: rgb(228,228,228);
 }
 
-.h_logo{
-    text-align: center;
-    margin-top: -40px;
-    margin-left: auto;
+.pt-30{
+    padding-top: 30px;
 }
 
-li{
-    list-style-type: none;
+a{
+    color: rgb(228,228,228) ;
+}
+.w-15{
+    width: 15%;
+}
+.inline-block{
+    display: inline-block;
+}
+.mb_6{
+   margin-bottom: -6px;
+}
+.mt_15{
+    margin-top:-15px;
 }
 
-li>a{
-    display: block;
-    color: white;
-    text-align: center;
-    font-family: cursive;
-    font-size: 20px;
-    text-decoration: none;
-}
 
-.navbar{
-    width: 1000px;
-    height: 80px;
 
-}
+/*body{*/
 
-.navbar>li{
-    width: 100px;
-    color: white;
-    line-height: 40px;
-    float: left;
-}
-.navbar>select{
+    /*height: 100%;*/
+    /*min-width:900px;*/
+/*}*/
+
+/*.h_logo{*/
+    /*text-align: center;*/
+    /*margin-top: -40px;*/
+    /*margin-left: auto;*/
+/*}*/
+
+/*li{*/
+    /*list-style-type: none;*/
+/*}*/
+
+/*li>a{*/
+    /*display: block;*/
+    /*color: white;*/
+    /*text-align: center;*/
+    /*font-family: cursive;*/
+    /*font-size: 20px;*/
+    /*text-decoration: none;*/
+/*}*/
+
+/*.navbar{*/
+    /*width: 1000px;*/
+    /*height: 80px;*/
+
+/*}*/
+
+/*.navbar>li{*/
+    /*width: 100px;*/
+    /*color: white;*/
+    /*line-height: 40px;*/
+/*}*/
+span>select{
     width: auto;
-    color: green;
+    color: grey;
     line-height: 40px;
     float: left;
     outline: none;
     border: transparent 1px solid ;
     font-size: 14pt;
-    margin-top: 10px;
-    background: #04c852;
+
+    background: transparent;
     text-align: center;
     text: red;
     color: white;
@@ -66,43 +100,42 @@ li>a{
 
 
 
-footer{
-    height: 80px;
-    background: #f7f7f7;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #06c123;
+/*footer{*/
+    /*height: 80px;*/
+    /*background: #f7f7f7;*/
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*width: 100%;*/
+    /*background-color: #06c123;*/
 
 
-}
+/*}*/
 .shopping-cart{
-    float: right;
+    /*float: right;*/
     margin-right: 20px;
-    width: 50px;
-    height: 50px;
-    color: transparent;
-    background-image: url("../image/shopping-cart.svg");
-    background-size: contain ;
-    background-repeat: no-repeat;
-
+    /*width: 50px;*/
+    /*height: 50px;*/
+    /*color: transparent;*/
+    /*background-image: url("../image/shopping-cart.svg");*/
+    /*background-size: contain ;*/
+    /*background-repeat: no-repeat;*/
     outline: none;
     cursor: pointer;
 
 }
-.wraper{
-    height: 100%;
-}
-
-/*main{*/
-    /*padding-bottom: 100px;*/
+/*.wraper{*/
+    /*height: 100%;*/
 /*}*/
 
-html {
+/*!*main{*!*/
+    /*!*padding-bottom: 100px;*!*/
+/*!*}*!*/
 
-    position:relative;
-    min-height:100%;
+/*html {*/
 
-}
+    /*position:relative;*/
+    /*min-height:100%;*/
+
+/*}*/
 
 
