--- a/src/main/resources/static/css/prod_wrapper.css
+++ b/src/main/resources/static/css/prod_wrapper.css
@@ -1,39 +1,15 @@
-.product-wrapper {
-    display: block;
-    width: 100%;
-    float: left;
-    transition: width .2s;
-}
 
-@media only screen and (min-width: 450px) {
-    .product-wrapper {
-        width: 50%;
-    }
-}
 
-@media only screen and (min-width: 768px) {
-    .product-wrapper {
-        width: 33.333%;
-    }
-}
 
-@media only screen and (min-width: 1000px) {
-    .product-wrapper {
-        width: 25%;
-    }
-}
 
 .product {
-    display: block;
-    border: 1px solid #b5e9a7;
+
+    border: 2px solid grey;
     border-radius: 3px;
-    position: relative;
     background: #fff;
-    margin: 0 20px 20px 0;
     text-decoration: none;
     color: #474747;
-    z-index: 0;
-    height: 400px;
+    height: 470px;
     /*width: 300px;*/
 }
 
@@ -88,7 +64,7 @@
     top: -1px;
     background: #fff;
     box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    border: 1px solid #56bd4b;
+    border: 1px solid grey;
     border-radius: 3px;
     overflow: hidden;
     text-align: center;
@@ -99,14 +75,11 @@
 
 
 .product p {
-    position: relative;
-    margin: 0;
-    font-size: 1em;
     line-height: 1.em;
-    height: 0.6em;
     overflow: hidden;
     padding: 10px;
     font-size: 11pt;
+    margin-bottom: 0;
 }
 
 .product p:after {
